--- a/src/js/App.scss
+++ b/src/js/App.scss
@@ -1,3 +1,49 @@
+$tunPurple: #e44fff;
+
+.app {
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.logo {
+	width: 25vh;
+	height: 25vh;
+	border-radius: 10px;
+	box-shadow: rgba(0, 147, 223, 0.3) 0px 3px 8px;
+}
+
+@keyframes breathe {
+	0% {
+		// box-shadow: 0px 0px 5px rgba(0, 147, 223, 0.4);
+	}
+
+	100% {
+		box-shadow: 0px 0px 10px rgb(0, 147, 223);
+	}
+}
+
+.title {
+	font-size: 32px;
+	margin: 20px 0;
+	color: #1890ff;
+	font-weight: bold;
+}
+
+.redux-context {
+	margin-bottom: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.button-increment {
+	margin-right: 10px;
+}
+
 .text-color {
-	color: purple;
+	color: $tunPurple;
 }
