--- a/src/js/App.scss
+++ b/src/js/App.scss
@@ -1,4 +1,4 @@
-$tunPurple: #e44fff;
+$tunPurple: #8b4dff;
 
 .app {
 	min-height: 100vh;
@@ -21,14 +21,14 @@ $tunPurple: #e44fff;
 	}
 
 	100% {
-		box-shadow: 0px 0px 10px rgb(0, 147, 223);
+		box-shadow: 0px 0px 10px $tunPurple;
 	}
 }
 
 .title {
 	font-size: 32px;
 	margin: 20px 0;
-	color: #1890ff;
+	color: $tunPurple;
 	font-weight: bold;
 }
 
