--- a/src/js/App.scss
+++ b/src/js/App.scss
@@ -44,6 +44,10 @@ $tunPurple: #8b4dff;
 	margin-right: 10px;
 }
 
+.show-router {
+	margin-bottom: 20px;
+}
+
 .text-color {
 	color: $tunPurple;
 }
